[tool.poetry]
name = "pgworkload"
version = "0.0.12a1"
description = "Workload framework for the PostgreSQL protocol"
authors = ["Fabio Ghirardello <fabio@cockroachlabs.com>"]
license = "GPLv3+"
readme = "README.md"
homepage = "https://github.com/fabiog1901/pgworkload"
repository = "https://github.com/fabiog1901/pgworkload"

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]

[tool.poetry.scripts]
pgworkload = 'pgworkload.main:main'

[tool.poetry.dependencies]
python = "^3.8"
psycopg = "*"
psycopg-binary = "*"
numpy = "*"
tabulate = "*"
pandas = "*"
pyyaml = "*"
prometheus_client = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

