[metadata]
name = pgworkload
version = 0.0.9
author = fabiog1901
description = Workload framework for the PostgreSQL protocol
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fabiog1901/pgworkload
project_urls =
    Bug Tracker = https://github.com/fabiog1901/pgworkload/issues
license = GPLv3+
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    psycopg
    psycopg-binary
    numpy
    tabulate
    pandas
    pyyaml
    prometheus_client

[options.packages.find]
where = src


[options.entry_points]
console_scripts =
    pgworkload = pgworkload.main:main
